syntax = "proto3";

package cache;

service CacheService {
  rpc Get (Request) returns (Response);
  rpc Set (SetRequest) returns (Response);
  rpc SetEX (SetEXRequest) returns (Response);
  rpc GetTTL (Request) returns (Response);
  rpc Delete(Request) returns (Response);
  rpc Incr (Request) returns (Response);
  rpc Expire (Request) returns (Response);
}

message Request {
  string key = 1;
}

message Response {
  string value = 1;
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message SetEXRequest {
  string key = 1;
  string value = 2;
  int32 ttl = 3;
}

message ExpireRequest {
  string key = 1;
  int32 ttl = 2;
  string mode = 3;
  string callback = 4;
}


